提交一些细微的汉化和代码调优

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -535,7 +535,7 @@ Body:
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off.\n"
   Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已登出.\n"
 - Original: "Character server IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "角色服务器的 IP 地址 : %s -> %s\n"
 - Original: "Character server binding IP address : %s -> %s\n"
   Translation: ""
 - Original: "Characters per Account: '%d'.\n"
@@ -655,13 +655,13 @@ Body:
 - Original: "Current script:\n"
   Translation: ""
 - Original: "DB error - %s\n"
-  Translation: ""
+  Translation: "数据库错误 - %s\n"
 - Original: "DB error - data of field '%s' was truncated.\n"
-  Translation: ""
+  Translation: "数据库错误 - 字段 '%s' 的数据已被截断, 内容可能不完整.\n"
 - Original: "DB error - data truncated (unknown source)\n"
-  Translation: ""
+  Translation: "数据库错误 - 数据已被截断 (无法判断来源)\n"
 - Original: "DB error - data truncated (unknown source, columns are not bound)\n"
-  Translation: ""
+  Translation: "数据库错误 - 数据已被截断 (无法判断来源, 字段未绑定到变量)\n"
 - Original: "DB integrity check finished with success\n"
   Translation: "已完成数据库表格和字段的完整性检测, 若未报错则表示检测通过.\n"
 - Original: "DNSBL: (%s) Blacklisted. User Kicked.\n"
@@ -707,7 +707,7 @@ Body:
 - Original: "Deploy %s is successful.\n"
   Translation: ""
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
-  Translation: "探测到 [{CL_WHITE}]%s[{CL_RESET}] 连接指向的目标数据库当前的字符集为 [{CL_WHITE}]%s[{CL_RESET}].\n"
+  Translation: "探测到 [{CL_WHITE}]%s[{CL_RESET}] 连接所指向的目标数据库当前的字符集为 [{CL_WHITE}]%s[{CL_RESET}].\n"
 - Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
   Translation: "终端信息翻译诊断信息: 内置页码 = %d | 交互语言 = 0x%04X\n"
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
@@ -921,7 +921,7 @@ Body:
 - Original: "Loaded %s data from table %s for %s: %d (total: %d)\n"
   Translation: "已加载 %s 数据, 源于 %s 表 (%s=%d), 共 %d 种物品\n"
 - Original: "Loaded char (%d - %s): %s\n"
-  Translation: "已加载角色 (%d - %s): %s\n"
+  Translation: "已加载角色 (%d - %s):%s\n"
 - Original: "Loaded guild castle (%d - guild %d)\n"
   Translation: "已加载第 %-2d 个城堡信息 (被编号为 %d 的公会占领)\n"
 - Original: "Loading Char Data ([{CL_BOLD}]%d[{CL_RESET}])\n"
@@ -965,7 +965,7 @@ Body:
 - Original: "Logging monster summon item usage to %s '%s'.\n"
   Translation: ""
 - Original: "Login server IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "登录服务器的 IP 地址: %s -> %s\n"
 - Original: "Login server binding IP address : %s -> %s\n"
   Translation: ""
 - Original: "Login server unavailable, can't perform update on '%s' variable for AID:%d CID:%d\n"
@@ -1160,6 +1160,8 @@ Body:
   Translation: ""
 - Original: "Please use '%s' instead!\n"
   Translation: ""
+- Original: "Please use ANSI character set as database encoding instead of [{CL_WHITE}]%s[{CL_RESET}] for [{CL_WHITE}]%s[{CL_RESET}] connection.\n"
+  Translation: "建议使用 ANSI 编码 (latin1, gbk, big5 等) 作为数据库字符集, 而不是用 [{CL_WHITE}]%s[{CL_RESET}] 作为 [{CL_WHITE}]%s[{CL_RESET}] 连接所指向的数据库的字符集.\n"
 - Original: "Prevented infinite warp loop for player (%d:%d). Please fix NPC: '%s', path: '%s'\n"
   Translation: ""
 - Original: "Previous script (lost):\n"
@@ -1239,7 +1241,7 @@ Body:
 - Original: "Sending users of map-server %d offline.\n"
   Translation: "正在给地图服务器 %d 的玩家发送下线请求.\n"
 - Original: "Server and client is not support Non-ANSI character set very well.\n"
-  Translation: ""
+  Translation: "仙境传说模拟器和客户端对非 ANSI 编码的字符集支持并不友好.\n"
 - Original: "Server crashdump file will be saved to: [{CL_WHITE}]'%s/'[{CL_RESET}]\n"
   Translation: "服务端程序崩溃时转储文件将保存到: [{CL_WHITE}]'%s/'[{CL_RESET}]\n"
 - Original: "Server has crashed while trying to save characters. Character data can't be saved!\n"
@@ -1263,7 +1265,7 @@ Body:
 - Original: "Server will connect to [{CL_WHITE}]'%s'[{CL_RESET}] database without set codepage.\n"
   Translation: ""
 - Original: "Session #%d timed out\n"
-  Translation: ""
+  Translation: "连接编号为 #%d 的会话已超时\n"
 - Original: "Set skills to '%d' monsters.\n"
   Translation: ""
 - Original: "Setting accounts from char-server %d offline.\n"
@@ -1303,9 +1305,9 @@ Body:
 - Original: "Storage has been saved (AID: %d).\n"
   Translation: ""
 - Original: "Subnet check [%u.%u.%u.%u]: Matches [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
-  Translation: "子网掩码 [%u.%u.%u.%u]: 已匹配到 [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
+  Translation: "子网检查 [%u.%u.%u.%u]: 已匹配到 [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
 - Original: "Subnet check [%u.%u.%u.%u]: [{CL_CYAN}]WAN[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "子网检查 [%u.%u.%u.%u]: [{CL_CYAN}]WAN - 广域网[{CL_RESET}]\n"
 - Original: "Successfully loaded '[{CL_WHITE}]%d[{CL_RESET}]' maps.[{CL_CLL}]\n"
   Translation: "已成功加载了 '[{CL_WHITE}]%d[{CL_RESET}]' 张地图.[{CL_CLL}]\n"
 - Original: "Successfully logged on to Char Server (Connection: '[{CL_WHITE}]%d[{CL_RESET}]').\n"
@@ -1438,8 +1440,6 @@ Body:
   Translation: ""
 - Original: "WFIFOSET: Write Buffer Overflow. Connection %d (%d.%d.%d.%d) has written %u bytes on a %u/%u bytes buffer.\n"
   Translation: ""
-- Original: "We suggest you use ANSI character set as database encoding.\n"
-  Translation: ""
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
   Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
@@ -1533,13 +1533,13 @@ Body:
 - Original: "[{CL_PASS}]     [{CL_BOLD}]        /_/  /_/  |_\\__/_/ /_/\\___/_/ /_/\\__,_/                  [{CL_PASS}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_RED}]Char Deleted[{CL_RESET}] [{CL_GREEN}](Birthdate)[{CL_RESET}].\n"
-  Translation: ""
+  Translation: "[{CL_RED}]已成功删除角色[{CL_RESET}] [{CL_GREEN}](通过生日认证)[{CL_RESET}].\n"
 - Original: "[{CL_RED}]Char Deleted[{CL_RESET}] [{CL_GREEN}](E-Mail)[{CL_RESET}].\n"
-  Translation: ""
+  Translation: "[{CL_RED}]已成功删除角色[{CL_RESET}] [{CL_GREEN}](通过 E-Mail 认证)[{CL_RESET}].\n"
 - Original: "[{CL_RED}]Request Char Deletion: [{CL_GREEN}]%d (%d)[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "[{CL_RED}]请求删除指定角色 [{CL_GREEN}]账号编号: %d | 角色编号: %d[{CL_RESET}]\n"
 - Original: "[{CL_RED}]Request Char Deletion: [{CL_GREEN}]%u (%u)[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "[{CL_RED}]请求删除指定角色 [{CL_GREEN}]账号编号: %u | 角色编号: %u[{CL_RESET}]\n"
 - Original: "[{CL_RED}][Error][{CL_RESET}]:"
   Translation: "[{CL_RED}][错误][{CL_RESET}]:"
 - Original: "[{CL_RED}][Fatal Error][{CL_RESET}]:"
