--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -535,7 +535,7 @@ Body:
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off.\n"
   Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已登出.\n"
 - Original: "Character server IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "角色伺服器的 IP 地址 : %s -> %s\n"
 - Original: "Character server binding IP address : %s -> %s\n"
   Translation: ""
 - Original: "Characters per Account: '%d'.\n"
@@ -655,13 +655,13 @@ Body:
 - Original: "Current script:\n"
   Translation: ""
 - Original: "DB error - %s\n"
-  Translation: ""
+  Translation: "資料庫錯誤 - %s\n"
 - Original: "DB error - data of field '%s' was truncated.\n"
-  Translation: ""
+  Translation: "資料庫錯誤 - 欄位 '%s' 的資料已被截斷, 內容可能不完整.\n"
 - Original: "DB error - data truncated (unknown source)\n"
-  Translation: ""
+  Translation: "資料庫錯誤 - 資料已被截斷 (無法判斷來源)\n"
 - Original: "DB error - data truncated (unknown source, columns are not bound)\n"
-  Translation: ""
+  Translation: "資料庫錯誤 - 資料已被截斷 (無法判斷來源, 欄位未繫結到變數)\n"
 - Original: "DB integrity check finished with success\n"
   Translation: "已完成資料庫表格和欄位的完整性檢測, 若未報錯則表示檢測通過.\n"
 - Original: "DNSBL: (%s) Blacklisted. User Kicked.\n"
@@ -707,7 +707,7 @@ Body:
 - Original: "Deploy %s is successful.\n"
   Translation: ""
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
-  Translation: "探測到 [{CL_WHITE}]%s[{CL_RESET}] 連線指向的目標資料庫當前的字符集為 [{CL_WHITE}]%s[{CL_RESET}].\n"
+  Translation: "探測到 [{CL_WHITE}]%s[{CL_RESET}] 連線所指向的目標資料庫當前的字符集為 [{CL_WHITE}]%s[{CL_RESET}].\n"
 - Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
   Translation: "終端資訊翻譯診斷資訊: 內建頁碼 = %d | 互動語言 = 0x%04X\n"
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
@@ -921,7 +921,7 @@ Body:
 - Original: "Loaded %s data from table %s for %s: %d (total: %d)\n"
   Translation: "已載入 %s 資料, 源於 %s 表 (%s=%d), 共 %d 種物品\n"
 - Original: "Loaded char (%d - %s): %s\n"
-  Translation: "已載入角色 (%d - %s): %s\n"
+  Translation: "已載入角色 (%d - %s):%s\n"
 - Original: "Loaded guild castle (%d - guild %d)\n"
   Translation: "已載入第 %-2d 個城堡資訊 (被編號為 %d 的公會佔領)\n"
 - Original: "Loading Char Data ([{CL_BOLD}]%d[{CL_RESET}])\n"
@@ -965,7 +965,7 @@ Body:
 - Original: "Logging monster summon item usage to %s '%s'.\n"
   Translation: ""
 - Original: "Login server IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "登入伺服器的 IP 地址: %s -> %s\n"
 - Original: "Login server binding IP address : %s -> %s\n"
   Translation: ""
 - Original: "Login server unavailable, can't perform update on '%s' variable for AID:%d CID:%d\n"
@@ -1160,6 +1160,8 @@ Body:
   Translation: ""
 - Original: "Please use '%s' instead!\n"
   Translation: ""
+- Original: "Please use ANSI character set as database encoding instead of [{CL_WHITE}]%s[{CL_RESET}] for [{CL_WHITE}]%s[{CL_RESET}] connection.\n"
+  Translation: "建議使用 ANSI 編碼 (latin1, gbk, big5 等) 作為資料庫字符集, 而不是用 [{CL_WHITE}]%s[{CL_RESET}] 作為 [{CL_WHITE}]%s[{CL_RESET}] 連線所指向的資料庫的字符集.\n"
 - Original: "Prevented infinite warp loop for player (%d:%d). Please fix NPC: '%s', path: '%s'\n"
   Translation: ""
 - Original: "Previous script (lost):\n"
@@ -1239,7 +1241,7 @@ Body:
 - Original: "Sending users of map-server %d offline.\n"
   Translation: "正在給地圖伺服器 %d 的玩家傳送下線請求.\n"
 - Original: "Server and client is not support Non-ANSI character set very well.\n"
-  Translation: ""
+  Translation: "仙境傳說模擬器和客戶端對非 ANSI 編碼的字符集支援並不友好.\n"
 - Original: "Server crashdump file will be saved to: [{CL_WHITE}]'%s/'[{CL_RESET}]\n"
   Translation: "服務端程式崩潰時轉儲檔案將儲存到: [{CL_WHITE}]'%s/'[{CL_RESET}]\n"
 - Original: "Server has crashed while trying to save characters. Character data can't be saved!\n"
@@ -1263,7 +1265,7 @@ Body:
 - Original: "Server will connect to [{CL_WHITE}]'%s'[{CL_RESET}] database without set codepage.\n"
   Translation: ""
 - Original: "Session #%d timed out\n"
-  Translation: ""
+  Translation: "連線編號為 #%d 的會話已超時\n"
 - Original: "Set skills to '%d' monsters.\n"
   Translation: ""
 - Original: "Setting accounts from char-server %d offline.\n"
@@ -1303,9 +1305,9 @@ Body:
 - Original: "Storage has been saved (AID: %d).\n"
   Translation: ""
 - Original: "Subnet check [%u.%u.%u.%u]: Matches [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
-  Translation: "子網掩碼 [%u.%u.%u.%u]: 已匹配到 [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
+  Translation: "子網檢查 [%u.%u.%u.%u]: 已匹配到 [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
 - Original: "Subnet check [%u.%u.%u.%u]: [{CL_CYAN}]WAN[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "子網檢查 [%u.%u.%u.%u]: [{CL_CYAN}]WAN - 廣域網[{CL_RESET}]\n"
 - Original: "Successfully loaded '[{CL_WHITE}]%d[{CL_RESET}]' maps.[{CL_CLL}]\n"
   Translation: "已成功\載入了 '[{CL_WHITE}]%d[{CL_RESET}]' 張地圖.[{CL_CLL}]\n"
 - Original: "Successfully logged on to Char Server (Connection: '[{CL_WHITE}]%d[{CL_RESET}]').\n"
@@ -1438,8 +1440,6 @@ Body:
   Translation: ""
 - Original: "WFIFOSET: Write Buffer Overflow. Connection %d (%d.%d.%d.%d) has written %u bytes on a %u/%u bytes buffer.\n"
   Translation: ""
-- Original: "We suggest you use ANSI character set as database encoding.\n"
-  Translation: ""
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
   Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
@@ -1533,13 +1533,13 @@ Body:
 - Original: "[{CL_PASS}]     [{CL_BOLD}]        /_/  /_/  |_\\__/_/ /_/\\___/_/ /_/\\__,_/                  [{CL_PASS}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_RED}]Char Deleted[{CL_RESET}] [{CL_GREEN}](Birthdate)[{CL_RESET}].\n"
-  Translation: ""
+  Translation: "[{CL_RED}]已成功\刪除角色[{CL_RESET}] [{CL_GREEN}](通過生日認證)[{CL_RESET}].\n"
 - Original: "[{CL_RED}]Char Deleted[{CL_RESET}] [{CL_GREEN}](E-Mail)[{CL_RESET}].\n"
-  Translation: ""
+  Translation: "[{CL_RED}]已成功\刪除角色[{CL_RESET}] [{CL_GREEN}](通過 E-Mail 認證)[{CL_RESET}].\n"
 - Original: "[{CL_RED}]Request Char Deletion: [{CL_GREEN}]%d (%d)[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "[{CL_RED}]請求刪除指定角色 [{CL_GREEN}]賬號編號: %d | 角色編號: %d[{CL_RESET}]\n"
 - Original: "[{CL_RED}]Request Char Deletion: [{CL_GREEN}]%u (%u)[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "[{CL_RED}]請求刪除指定角色 [{CL_GREEN}]賬號編號: %u | 角色編號: %u[{CL_RESET}]\n"
 - Original: "[{CL_RED}][Error][{CL_RESET}]:"
   Translation: "[{CL_RED}][錯誤][{CL_RESET}]:"
 - Original: "[{CL_RED}][Fatal Error][{CL_RESET}]:"
