--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -537,7 +537,7 @@ Body:
 - Original: "Character server IP address : %s -> %s\n"
   Translation: "角色服务器的 IP 地址 : %s -> %s\n"
 - Original: "Character server binding IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "角色服务器绑定的 IP 地址 : %s -> %s\n"
 - Original: "Characters per Account: '%d'.\n"
   Translation: "每个帐号最多只能创建 '%d' 个角色 (若为则 0 表示无限制).\n"
 - Original: "Checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets...\n"
@@ -967,7 +967,7 @@ Body:
 - Original: "Login server IP address : %s -> %s\n"
   Translation: "登录服务器的 IP 地址: %s -> %s\n"
 - Original: "Login server binding IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "登录服务器绑定的 IP 地址 : %s -> %s\n"
 - Original: "Login server unavailable, can't perform update on '%s' variable for AID:%d CID:%d\n"
   Translation: ""
 - Original: "MOB can't move. random spawn %d, class = %d, at %s (%d,%d)\n"
@@ -985,7 +985,7 @@ Body:
 - Original: "Map '[{CL_WHITE}]%s[{CL_RESET}]' successfully cached.\n"
   Translation: ""
 - Original: "Map Server Bind IP Address : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: ""
+  Translation: "地图服务器绑定的 IP 地址 : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Map Server IP Address : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "地图服务器的 IP 地址 : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Map Server is now online.\n"
