修正一处编码的转换问题

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -18,7 +18,7 @@ party_share_level: 15
 
 // 您可以为 MySQL 的表指定特殊的编码. 
 // 注意: 这个特性只有在 MySQL 版本在 4.1 及更新的版本中才支持.
-// 下方的 login_codepage, ipban_codepage, log_codepage 等选项与此同理
+// 当下方 *_codepage 等选项为空时才会使用此处 default_codepage 的值
 default_codepage: auto
 
 // 接下来涉及到的几个 MySQL 数据库服务器的设置,
@@ -43,7 +43,7 @@ login_server_port: 3306
 login_server_id: ragnarok
 login_server_pw: ragnarok
 login_server_db: ragnarok
-login_codepage: auto
+login_codepage: 
 login_case_sensitive: no
 
 // 登录服务器专用
@@ -54,7 +54,7 @@ ipban_db_port: 3306
 ipban_db_id: ragnarok
 ipban_db_pw: ragnarok
 ipban_db_db: ragnarok
-ipban_codepage: auto
+ipban_codepage: 
 
 // 角色服务器专用
 // MySQL 主数据库的连接配置信息
@@ -64,7 +64,7 @@ char_server_port: 3306
 char_server_id: ragnarok
 char_server_pw: ragnarok
 char_server_db: ragnarok
-char_codepage: auto
+char_codepage: 
 
 // 地图服务器专用
 // MySQL 主数据库的连接配置信息
@@ -74,7 +74,7 @@ map_server_port: 3306
 map_server_id: ragnarok
 map_server_pw: ragnarok
 map_server_db: ragnarok
-map_codepage: auto
+map_codepage: 
 
 // 登录、地图服务器共用
 // MySQL 日志数据库的连接配置信息
@@ -84,7 +84,7 @@ log_db_port: 3306
 log_db_id: ragnarok
 log_db_pw: ragnarok
 log_db_db: ragnarok
-log_codepage: auto
+log_codepage: 
 log_login_db: loginlog
 
 // MySQL 掉线重连策略
