修正部分情况下会导致角色名乱码的问题

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -707,7 +707,7 @@ Body:
 - Original: "Deploy %s is successful.\n"
   Translation: ""
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
-  Translation: "探测到 [{CL_WHITE}]%s[{CL_RESET}] 连接所指向的目标数据库当前的字符集为 [{CL_WHITE}]%s[{CL_RESET}].\n"
+  Translation: "探测到 [{CL_WHITE}]'%s'[{CL_RESET}] 连接所指向的目标数据库当前的字符集为 [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
   Translation: "终端信息翻译诊断信息: 内置页码 = %d | 交互语言 = 0x%04X\n"
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
@@ -1549,7 +1549,7 @@ Body:
 - Original: "[{CL_WHITE}][Notice][{CL_RESET}]:"
   Translation: "[{CL_WHITE}][提示][{CL_RESET}]:"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Connecting to the Log Database [{CL_WHITE}]%s[{CL_RESET}] At [{CL_WHITE}]%s[{CL_RESET}]...\n"
-  Translation: "正在连接日志数据库 [{CL_WHITE}]%s[{CL_RESET}] 位于 [{CL_WHITE}]%s[{CL_RESET}]...\n"
+  Translation: "正在连接日志数据库 [{CL_WHITE}]'%s'[{CL_RESET}] 位于 [{CL_WHITE}]%s[{CL_RESET}]...\n"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Successfully '[{CL_GREEN}]connected[{CL_RESET}]' to Database '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "[{CL_GREEN}]已成功连接[{CL_RESET}] 到日志数据库 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "[{CL_YELLOW}][Warning][{CL_RESET}]:"
