--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -707,7 +707,7 @@ Body:
 - Original: "Deploy %s is successful.\n"
   Translation: ""
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
-  Translation: "探測到 [{CL_WHITE}]%s[{CL_RESET}] 連線所指向的目標資料庫當前的字符集為 [{CL_WHITE}]%s[{CL_RESET}].\n"
+  Translation: "探測到 [{CL_WHITE}]'%s'[{CL_RESET}] 連線所指向的目標資料庫當前的字符集為 [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
   Translation: "終端資訊翻譯診斷資訊: 內建頁碼 = %d | 互動語言 = 0x%04X\n"
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
@@ -1549,7 +1549,7 @@ Body:
 - Original: "[{CL_WHITE}][Notice][{CL_RESET}]:"
   Translation: "[{CL_WHITE}][提示][{CL_RESET}]:"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Connecting to the Log Database [{CL_WHITE}]%s[{CL_RESET}] At [{CL_WHITE}]%s[{CL_RESET}]...\n"
-  Translation: "正在連線日誌資料庫 [{CL_WHITE}]%s[{CL_RESET}] 位於 [{CL_WHITE}]%s[{CL_RESET}]...\n"
+  Translation: "正在連線日誌資料庫 [{CL_WHITE}]'%s'[{CL_RESET}] 位於 [{CL_WHITE}]%s[{CL_RESET}]...\n"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Successfully '[{CL_GREEN}]connected[{CL_RESET}]' to Database '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "[{CL_GREEN}]已成功\連線[{CL_RESET}] 到日誌資料庫 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "[{CL_YELLOW}][Warning][{CL_RESET}]:"
