--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -16,9 +16,19 @@ log_inter: 1
 // 否则就无法开启经验均分选项
 party_share_level: 15
 
-// 您可以为 MySQL 的表指定特殊的编码. 
+// 连接到 MySQL 数据库时使用的默认连接编码
 // 注意: 这个特性只有在 MySQL 版本在 4.1 及更新的版本中才支持.
-// 当下方 *_codepage 等选项为空时才会使用此处 default_codepage 的值
+// 当下方 *_codepage 等选项为空时才会使用此处 default_codepage 的值.
+//
+// 若设置为 auto 则编码规则会根据环境自动变化,
+// 下面几个 *_codepage 的选项若取值为 auto , 那么其含义与此一致:
+// 
+// 1. 系统语言为简体中文时, auto 将会自动变成 gbk 编码
+// 2. 系统语言为繁体中文时, auto 将会自动变成 big5 编码
+// 3. 其他的系统语言将不会去设置数据库的连接编码
+// 
+// 若运行熊猫模拟器的操作系统语言和你期望的游戏内语言不一致,
+// 那么建议在此明确指定 gbk 或者 big5, 而不是 auto
 default_codepage: auto
 
 // 接下来涉及到的几个 MySQL 数据库服务器的设置,
