修正地图服务器建立数据库连接时的编码探测错误

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -25,7 +25,7 @@ party_share_level: 15
 // 
 // 1. 系统语言为简体中文时, auto 将会自动变成 gbk 编码
 // 2. 系统语言为繁体中文时, auto 将会自动变成 big5 编码
-// 3. 其他的系统语言将不会去设置数据库的连接编码
+// 3. 其他语言将会使用数据库 `character_set_database` 变量指定的编码
 // 
 // 若运行熊猫模拟器的操作系统语言和你期望的游戏内语言不一致,
 // 那么建议在此明确指定 gbk 或者 big5, 而不是 auto
