解决中文角色名在 Linux 终端上显示乱码的问题 (#227)

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -16,9 +16,19 @@ log_inter: 1
 // 否则就无法开启经验均分选项
 party_share_level: 15
 
-// 您可以为 MySQL 的表指定特殊的编码. 
+// 连接到 MySQL 数据库时使用的默认连接编码
 // 注意: 这个特性只有在 MySQL 版本在 4.1 及更新的版本中才支持.
-// 下方的 login_codepage, ipban_codepage, log_codepage 等选项与此同理
+// 当下方 *_codepage 等选项为空时才会使用此处 default_codepage 的值.
+//
+// 若设置为 auto 则编码规则会根据环境自动变化,
+// 下面几个 *_codepage 的选项若取值为 auto , 那么其含义与此一致:
+// 
+// 1. 系统语言为简体中文时, auto 将会自动变成 gbk 编码
+// 2. 系统语言为繁体中文时, auto 将会自动变成 big5 编码
+// 3. 其他语言将会使用数据库 `character_set_database` 变量指定的编码
+// 
+// 若运行熊猫模拟器的操作系统语言和你期望的游戏内语言不一致,
+// 那么建议在此明确指定 gbk 或者 big5, 而不是 auto
 default_codepage: auto
 
 // 接下来涉及到的几个 MySQL 数据库服务器的设置,
@@ -43,7 +53,7 @@ login_server_port: 3306
 login_server_id: ragnarok
 login_server_pw: ragnarok
 login_server_db: ragnarok
-login_codepage: auto
+login_codepage: 
 login_case_sensitive: no
 
 // 登录服务器专用
@@ -54,7 +64,7 @@ ipban_db_port: 3306
 ipban_db_id: ragnarok
 ipban_db_pw: ragnarok
 ipban_db_db: ragnarok
-ipban_codepage: auto
+ipban_codepage: 
 
 // 角色服务器专用
 // MySQL 主数据库的连接配置信息
@@ -64,7 +74,7 @@ char_server_port: 3306
 char_server_id: ragnarok
 char_server_pw: ragnarok
 char_server_db: ragnarok
-char_codepage: auto
+char_codepage: 
 
 // 地图服务器专用
 // MySQL 主数据库的连接配置信息
@@ -74,7 +84,7 @@ map_server_port: 3306
 map_server_id: ragnarok
 map_server_pw: ragnarok
 map_server_db: ragnarok
-map_codepage: auto
+map_codepage: 
 
 // 登录、地图服务器共用
 // MySQL 日志数据库的连接配置信息
@@ -84,7 +94,7 @@ log_db_port: 3306
 log_db_id: ragnarok
 log_db_pw: ragnarok
 log_db_db: ragnarok
-log_codepage: auto
+log_codepage: 
 log_login_db: loginlog
 
 // MySQL 掉线重连策略
