--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -314,6 +314,8 @@ Body:
   Translation: ""
 - Original: "%s: _Buffer size is only %lu but we need %lu, Could not realloc...\n"
   Translation: ""
+- Original: "%s: dynamic buffer used, increase the static buffer size to %d or more.\n"
+  Translation: ""
 - Original: "%s: fatal error ! player not attached!\n"
   Translation: ""
 - Original: "%s: not enough arguments for %s! Skipping...\n"
@@ -535,9 +537,9 @@ Body:
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off.\n"
   Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已登出.\n"
 - Original: "Character server IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "角色服务器的 IP 地址 : %s -> %s\n"
 - Original: "Character server binding IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "角色服务器绑定的 IP 地址 : %s -> %s\n"
 - Original: "Characters per Account: '%d'.\n"
   Translation: "每个帐号最多只能创建 '%d' 个角色 (若为则 0 表示无限制).\n"
 - Original: "Checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets...\n"
@@ -595,7 +597,7 @@ Body:
 - Original: "Connection of the char-server '%s' accepted.\n"
   Translation: "已接受角色服务器 '%s' 的连接建立请求.\n"
 - Original: "Connection refused (account: %s, banned until %s, ip: %s)\n"
-  Translation: ""
+  Translation: "拒绝连接 (账号: %s, 被封号直到: %s, IP地址: %s)\n"
 - Original: "Connection refused (account: %s, expired ID, ip: %s)\n"
   Translation: ""
 - Original: "Connection refused (account: %s, state: %d, ip: %s)\n"
@@ -649,19 +651,19 @@ Body:
 - Original: "Created Guild %d - %s (Guild Master: %s)\n"
   Translation: ""
 - Original: "Created char: account: %d, char: %d, slot: %d, name: %s\n"
-  Translation: ""
+  Translation: "已创建角色: 账号编号: %d, 角色编号: %d, 槽位编号: %d, 角色名称: %s\n"
 - Original: "Creating Guild (%s)\n"
   Translation: ""
 - Original: "Current script:\n"
   Translation: ""
 - Original: "DB error - %s\n"
-  Translation: ""
+  Translation: "数据库错误 - %s\n"
 - Original: "DB error - data of field '%s' was truncated.\n"
-  Translation: ""
+  Translation: "数据库错误 - 字段 '%s' 的数据已被截断, 内容可能不完整.\n"
 - Original: "DB error - data truncated (unknown source)\n"
-  Translation: ""
+  Translation: "数据库错误 - 数据已被截断 (无法判断来源)\n"
 - Original: "DB error - data truncated (unknown source, columns are not bound)\n"
-  Translation: ""
+  Translation: "数据库错误 - 数据已被截断 (无法判断来源, 字段未绑定到变量)\n"
 - Original: "DB integrity check finished with success\n"
   Translation: "已完成数据库表格和字段的完整性检测, 若未报错则表示检测通过.\n"
 - Original: "DNSBL: (%s) Blacklisted. User Kicked.\n"
@@ -707,7 +709,7 @@ Body:
 - Original: "Deploy %s is successful.\n"
   Translation: ""
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
-  Translation: "探测到 [{CL_WHITE}]%s[{CL_RESET}] 连接指向的目标数据库当前的字符集为 [{CL_WHITE}]%s[{CL_RESET}].\n"
+  Translation: "探测到 [{CL_WHITE}]'%s'[{CL_RESET}] 连接所指向的目标数据库当前的字符集为 [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
   Translation: "终端信息翻译诊断信息: 内置页码 = %d | 交互语言 = 0x%04X\n"
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
@@ -891,7 +893,7 @@ Body:
 - Original: "Invalid message ID '%s' at line %d from '%s' file.\n"
   Translation: ""
 - Original: "Invalid password (account: '%s', ip: %s)\n"
-  Translation: ""
+  Translation: "错误的登录密码 (账号: '%s', IP地址: %s)\n"
 - Original: "Invalid storage with id %d\n"
   Translation: ""
 - Original: "Invalid table name!\n"
@@ -921,7 +923,7 @@ Body:
 - Original: "Loaded %s data from table %s for %s: %d (total: %d)\n"
   Translation: "已加载 %s 数据, 源于 %s 表 (%s=%d), 共 %d 种物品\n"
 - Original: "Loaded char (%d - %s): %s\n"
-  Translation: "已加载角色 (%d - %s): %s\n"
+  Translation: "已加载角色 (%d - %s):%s\n"
 - Original: "Loaded guild castle (%d - guild %d)\n"
   Translation: "已加载第 %-2d 个城堡信息 (被编号为 %d 的公会占领)\n"
 - Original: "Loading Char Data ([{CL_BOLD}]%d[{CL_RESET}])\n"
@@ -965,9 +967,9 @@ Body:
 - Original: "Logging monster summon item usage to %s '%s'.\n"
   Translation: ""
 - Original: "Login server IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "登录服务器的 IP 地址: %s -> %s\n"
 - Original: "Login server binding IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "登录服务器绑定的 IP 地址 : %s -> %s\n"
 - Original: "Login server unavailable, can't perform update on '%s' variable for AID:%d CID:%d\n"
   Translation: ""
 - Original: "MOB can't move. random spawn %d, class = %d, at %s (%d,%d)\n"
@@ -985,7 +987,7 @@ Body:
 - Original: "Map '[{CL_WHITE}]%s[{CL_RESET}]' successfully cached.\n"
   Translation: ""
 - Original: "Map Server Bind IP Address : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: ""
+  Translation: "地图服务器绑定的 IP 地址 : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Map Server IP Address : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "地图服务器的 IP 地址 : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Map Server is now online.\n"
@@ -1143,7 +1145,7 @@ Body:
 - Original: "Pincode is disabled.\n"
   Translation: ""
 - Original: "Pinging SQL server to keep connection alive...\n"
-  Translation: ""
+  Translation: "正在给数据库服务器发送心跳包, 以维持连接的激活状态...\n"
 - Original: "Player %s (%d:%d) sent a hexed packet trying to buy %d of nonstackable item %hu!\n"
   Translation: ""
 - Original: "Player %u sent incorrect cash shop buy packet (len %u:%u)!\n"
@@ -1160,6 +1162,8 @@ Body:
   Translation: ""
 - Original: "Please use '%s' instead!\n"
   Translation: ""
+- Original: "Please use ANSI character set as database encoding instead of [{CL_WHITE}]'%s'[{CL_RESET}] for [{CL_WHITE}]'%s'[{CL_RESET}] connection. The ANSI character set like: latin1, gbk, big5.\n"
+  Translation: "建议使用 ANSI 编码作为数据库字符集, 而不是用 [{CL_WHITE}]'%s'[{CL_RESET}] 作为 [{CL_WHITE}]'%s'[{CL_RESET}] 连接所指向的数据库的字符集 (ANSI 编码是指: latin1, gbk, big5 等).\n"
 - Original: "Prevented infinite warp loop for player (%d:%d). Please fix NPC: '%s', path: '%s'\n"
   Translation: ""
 - Original: "Previous script (lost):\n"
@@ -1217,7 +1221,7 @@ Body:
 - Original: "Saved %s (%d) data to table %s for %s: %d\n"
   Translation: "已保存 %s (%d) 数据到 %s 表 (%s=%d)\n"
 - Original: "Saved char %d - %s:%s.\n"
-  Translation: "已保存角色编号为: %d, 角色名为: %s 的 %s 数据.\n"
+  Translation: "已保存角色编号为: %d, 角色名为: %s 的%s 数据.\n"
 - Original: "Saved guild (%d - %s):%s\n"
   Translation: ""
 - Original: "Saved guild castle (%d)\n"
@@ -1239,7 +1243,7 @@ Body:
 - Original: "Sending users of map-server %d offline.\n"
   Translation: "正在给地图服务器 %d 的玩家发送下线请求.\n"
 - Original: "Server and client is not support Non-ANSI character set very well.\n"
-  Translation: ""
+  Translation: "仙境传说模拟器和客户端对非 ANSI 编码的字符集支持并不友好.\n"
 - Original: "Server crashdump file will be saved to: [{CL_WHITE}]'%s/'[{CL_RESET}]\n"
   Translation: "服务端程序崩溃时转储文件将保存到: [{CL_WHITE}]'%s/'[{CL_RESET}]\n"
 - Original: "Server has crashed while trying to save characters. Character data can't be saved!\n"
@@ -1260,10 +1264,8 @@ Body:
   Translation: "服务端程序使用 '[{CL_WHITE}]select[{CL_RESET}]' 事件分发器.\n"
 - Original: "Server will connect to [{CL_WHITE}]'%s'[{CL_RESET}] database using [{CL_WHITE}]'%s'[{CL_RESET}].\n"
   Translation: "服务端程序在建立 [{CL_WHITE}]'%s'[{CL_RESET}] 连接时将使用 [{CL_WHITE}]'%s'[{CL_RESET}] 编码.\n"
-- Original: "Server will connect to [{CL_WHITE}]'%s'[{CL_RESET}] database without set codepage.\n"
-  Translation: ""
 - Original: "Session #%d timed out\n"
-  Translation: ""
+  Translation: "连接编号为 #%d 的会话已超时\n"
 - Original: "Set skills to '%d' monsters.\n"
   Translation: ""
 - Original: "Setting accounts from char-server %d offline.\n"
@@ -1303,9 +1305,9 @@ Body:
 - Original: "Storage has been saved (AID: %d).\n"
   Translation: ""
 - Original: "Subnet check [%u.%u.%u.%u]: Matches [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
-  Translation: "子网掩码 [%u.%u.%u.%u]: 已匹配到 [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
+  Translation: "子网检查 [%u.%u.%u.%u]: 已匹配到 [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
 - Original: "Subnet check [%u.%u.%u.%u]: [{CL_CYAN}]WAN[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "子网检查 [%u.%u.%u.%u]: [{CL_CYAN}]WAN - 广域网[{CL_RESET}]\n"
 - Original: "Successfully loaded '[{CL_WHITE}]%d[{CL_RESET}]' maps.[{CL_CLL}]\n"
   Translation: "已成功加载了 '[{CL_WHITE}]%d[{CL_RESET}]' 张地图.[{CL_CLL}]\n"
 - Original: "Successfully logged on to Char Server (Connection: '[{CL_WHITE}]%d[{CL_RESET}]').\n"
@@ -1413,7 +1415,7 @@ Body:
 - Original: "Usage: %s [options]\n"
   Translation: ""
 - Original: "User '%s' is already online - Rejected.\n"
-  Translation: ""
+  Translation: "账号 '%s' 已经在线 - 拒绝本次登录, 并将此账号踢下线.\n"
 - Original: "User Count: %d (Server: %d)\n"
   Translation: ""
 - Original: "Using SQL dbs: %s\n"
@@ -1438,8 +1440,6 @@ Body:
   Translation: ""
 - Original: "WFIFOSET: Write Buffer Overflow. Connection %d (%d.%d.%d.%d) has written %u bytes on a %u/%u bytes buffer.\n"
   Translation: ""
-- Original: "We suggest you use ANSI character set as database encoding.\n"
-  Translation: ""
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
   Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
@@ -1451,9 +1451,9 @@ Body:
 - Original: "[Instance] Created map '%s' ('%d') from map '%s' ('%d')\n"
   Translation: ""
 - Original: "[Instance] Created: %s (%hu).\n"
-  Translation: ""
+  Translation: "[副本系统] 已创建副本: %s (副本编号: #%hu).\n"
 - Original: "[Instance] Destroyed %hu.\n"
-  Translation: ""
+  Translation: "[副本系统] 已销毁编号为 #%hu 的副本.\n"
 - Original: "[{CL_BG_RED}]     [{CL_BOLD}]                                                                      [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                                                                  [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
@@ -1533,13 +1533,13 @@ Body:
 - Original: "[{CL_PASS}]     [{CL_BOLD}]        /_/  /_/  |_\\__/_/ /_/\\___/_/ /_/\\__,_/                  [{CL_PASS}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_RED}]Char Deleted[{CL_RESET}] [{CL_GREEN}](Birthdate)[{CL_RESET}].\n"
-  Translation: ""
+  Translation: "[{CL_RED}]已成功删除角色[{CL_RESET}] [{CL_GREEN}](通过生日认证)[{CL_RESET}].\n"
 - Original: "[{CL_RED}]Char Deleted[{CL_RESET}] [{CL_GREEN}](E-Mail)[{CL_RESET}].\n"
-  Translation: ""
+  Translation: "[{CL_RED}]已成功删除角色[{CL_RESET}] [{CL_GREEN}](通过 E-Mail 认证)[{CL_RESET}].\n"
 - Original: "[{CL_RED}]Request Char Deletion: [{CL_GREEN}]%d (%d)[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "[{CL_RED}]请求删除指定角色 [{CL_GREEN}]账号编号: %d | 角色编号: %d[{CL_RESET}]\n"
 - Original: "[{CL_RED}]Request Char Deletion: [{CL_GREEN}]%u (%u)[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "[{CL_RED}]请求删除指定角色 [{CL_GREEN}]账号编号: %u | 角色编号: %u[{CL_RESET}]\n"
 - Original: "[{CL_RED}][Error][{CL_RESET}]:"
   Translation: "[{CL_RED}][错误][{CL_RESET}]:"
 - Original: "[{CL_RED}][Fatal Error][{CL_RESET}]:"
@@ -1549,7 +1549,7 @@ Body:
 - Original: "[{CL_WHITE}][Notice][{CL_RESET}]:"
   Translation: "[{CL_WHITE}][提示][{CL_RESET}]:"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Connecting to the Log Database [{CL_WHITE}]%s[{CL_RESET}] At [{CL_WHITE}]%s[{CL_RESET}]...\n"
-  Translation: "正在连接日志数据库 [{CL_WHITE}]%s[{CL_RESET}] 位于 [{CL_WHITE}]%s[{CL_RESET}]...\n"
+  Translation: "正在连接日志数据库 [{CL_WHITE}]'%s'[{CL_RESET}] 位于 [{CL_WHITE}]%s[{CL_RESET}]...\n"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Successfully '[{CL_GREEN}]connected[{CL_RESET}]' to Database '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "[{CL_GREEN}]已成功连接[{CL_RESET}] 到日志数据库 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "[{CL_YELLOW}][Warning][{CL_RESET}]:"
@@ -3053,11 +3053,11 @@ Body:
 - Original: "make_connection: Socket #0 is reserved - Please report this!!!\n"
   Translation: ""
 - Original: "make_connection: connect failed (socket #%d, %s)!\n"
-  Translation: ""
+  Translation: "连接失败 (套接字 #%d, %s)!\n"
 - Original: "make_connection: connection failed (socket #%d, not writeable)!\n"
-  Translation: ""
+  Translation: "连接失败 (套接字 #%d, 无法写入数据)!\n"
 - Original: "make_connection: connection failed (socket #%d, timeout after %ds)!\n"
-  Translation: ""
+  Translation: "连接失败 (套接字 #%d, 经过 %d 秒等待, 已被判定为超时)!\n"
 - Original: "make_connection: failed to add socket #%d to epoll event dispatcher: %s\n"
   Translation: ""
 - Original: "make_connection: socket creation failed (%s)!\n"
