--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -314,6 +314,8 @@ Body:
   Translation: ""
 - Original: "%s: _Buffer size is only %lu but we need %lu, Could not realloc...\n"
   Translation: ""
+- Original: "%s: dynamic buffer used, increase the static buffer size to %d or more.\n"
+  Translation: ""
 - Original: "%s: fatal error ! player not attached!\n"
   Translation: ""
 - Original: "%s: not enough arguments for %s! Skipping...\n"
@@ -535,9 +537,9 @@ Body:
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off.\n"
   Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 已登出.\n"
 - Original: "Character server IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "角色伺服器的 IP 地址 : %s -> %s\n"
 - Original: "Character server binding IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "角色伺服器繫結的 IP 地址 : %s -> %s\n"
 - Original: "Characters per Account: '%d'.\n"
   Translation: "每個帳號最多隻能建立 '%d' 個角色 (若為則 0 表示無限制).\n"
 - Original: "Checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets...\n"
@@ -595,7 +597,7 @@ Body:
 - Original: "Connection of the char-server '%s' accepted.\n"
   Translation: "已接受角色伺服器 '%s' 的連線建立請求.\n"
 - Original: "Connection refused (account: %s, banned until %s, ip: %s)\n"
-  Translation: ""
+  Translation: "拒絕連線 (賬號: %s, 被封號直到: %s, IP地址: %s)\n"
 - Original: "Connection refused (account: %s, expired ID, ip: %s)\n"
   Translation: ""
 - Original: "Connection refused (account: %s, state: %d, ip: %s)\n"
@@ -649,19 +651,19 @@ Body:
 - Original: "Created Guild %d - %s (Guild Master: %s)\n"
   Translation: ""
 - Original: "Created char: account: %d, char: %d, slot: %d, name: %s\n"
-  Translation: ""
+  Translation: "已建立角色: 賬號編號: %d, 角色編號: %d, 槽位編號: %d, 角色名稱: %s\n"
 - Original: "Creating Guild (%s)\n"
   Translation: ""
 - Original: "Current script:\n"
   Translation: ""
 - Original: "DB error - %s\n"
-  Translation: ""
+  Translation: "資料庫錯誤 - %s\n"
 - Original: "DB error - data of field '%s' was truncated.\n"
-  Translation: ""
+  Translation: "資料庫錯誤 - 欄位 '%s' 的資料已被截斷, 內容可能不完整.\n"
 - Original: "DB error - data truncated (unknown source)\n"
-  Translation: ""
+  Translation: "資料庫錯誤 - 資料已被截斷 (無法判斷來源)\n"
 - Original: "DB error - data truncated (unknown source, columns are not bound)\n"
-  Translation: ""
+  Translation: "資料庫錯誤 - 資料已被截斷 (無法判斷來源, 欄位未繫結到變數)\n"
 - Original: "DB integrity check finished with success\n"
   Translation: "已完成資料庫表格和欄位的完整性檢測, 若未報錯則表示檢測通過.\n"
 - Original: "DNSBL: (%s) Blacklisted. User Kicked.\n"
@@ -707,7 +709,7 @@ Body:
 - Original: "Deploy %s is successful.\n"
   Translation: ""
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
-  Translation: "探測到 [{CL_WHITE}]%s[{CL_RESET}] 連線指向的目標資料庫當前的字符集為 [{CL_WHITE}]%s[{CL_RESET}].\n"
+  Translation: "探測到 [{CL_WHITE}]'%s'[{CL_RESET}] 連線所指向的目標資料庫當前的字符集為 [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
   Translation: "終端資訊翻譯診斷資訊: 內建頁碼 = %d | 互動語言 = 0x%04X\n"
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
@@ -891,7 +893,7 @@ Body:
 - Original: "Invalid message ID '%s' at line %d from '%s' file.\n"
   Translation: ""
 - Original: "Invalid password (account: '%s', ip: %s)\n"
-  Translation: ""
+  Translation: "錯誤的登入密碼 (賬號: '%s', IP地址: %s)\n"
 - Original: "Invalid storage with id %d\n"
   Translation: ""
 - Original: "Invalid table name!\n"
@@ -921,7 +923,7 @@ Body:
 - Original: "Loaded %s data from table %s for %s: %d (total: %d)\n"
   Translation: "已載入 %s 資料, 源於 %s 表 (%s=%d), 共 %d 種物品\n"
 - Original: "Loaded char (%d - %s): %s\n"
-  Translation: "已載入角色 (%d - %s): %s\n"
+  Translation: "已載入角色 (%d - %s):%s\n"
 - Original: "Loaded guild castle (%d - guild %d)\n"
   Translation: "已載入第 %-2d 個城堡資訊 (被編號為 %d 的公會佔領)\n"
 - Original: "Loading Char Data ([{CL_BOLD}]%d[{CL_RESET}])\n"
@@ -965,9 +967,9 @@ Body:
 - Original: "Logging monster summon item usage to %s '%s'.\n"
   Translation: ""
 - Original: "Login server IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "登入伺服器的 IP 地址: %s -> %s\n"
 - Original: "Login server binding IP address : %s -> %s\n"
-  Translation: ""
+  Translation: "登入伺服器繫結的 IP 地址 : %s -> %s\n"
 - Original: "Login server unavailable, can't perform update on '%s' variable for AID:%d CID:%d\n"
   Translation: ""
 - Original: "MOB can't move. random spawn %d, class = %d, at %s (%d,%d)\n"
@@ -985,7 +987,7 @@ Body:
 - Original: "Map '[{CL_WHITE}]%s[{CL_RESET}]' successfully cached.\n"
   Translation: ""
 - Original: "Map Server Bind IP Address : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: ""
+  Translation: "地圖伺服器繫結的 IP 地址 : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Map Server IP Address : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "地圖伺服器的 IP 地址 : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Map Server is now online.\n"
@@ -1143,7 +1145,7 @@ Body:
 - Original: "Pincode is disabled.\n"
   Translation: ""
 - Original: "Pinging SQL server to keep connection alive...\n"
-  Translation: ""
+  Translation: "正在給資料庫伺服器傳送心跳包, 以維持連線的啟用狀態...\n"
 - Original: "Player %s (%d:%d) sent a hexed packet trying to buy %d of nonstackable item %hu!\n"
   Translation: ""
 - Original: "Player %u sent incorrect cash shop buy packet (len %u:%u)!\n"
@@ -1160,6 +1162,8 @@ Body:
   Translation: ""
 - Original: "Please use '%s' instead!\n"
   Translation: ""
+- Original: "Please use ANSI character set as database encoding instead of [{CL_WHITE}]'%s'[{CL_RESET}] for [{CL_WHITE}]'%s'[{CL_RESET}] connection. The ANSI character set like: latin1, gbk, big5.\n"
+  Translation: "建議使用 ANSI 編碼作為資料庫字符集, 而不是用 [{CL_WHITE}]'%s'[{CL_RESET}] 作為 [{CL_WHITE}]'%s'[{CL_RESET}] 連線所指向的資料庫的字符集 (ANSI 編碼是指: latin1, gbk, big5 等).\n"
 - Original: "Prevented infinite warp loop for player (%d:%d). Please fix NPC: '%s', path: '%s'\n"
   Translation: ""
 - Original: "Previous script (lost):\n"
@@ -1217,7 +1221,7 @@ Body:
 - Original: "Saved %s (%d) data to table %s for %s: %d\n"
   Translation: "已儲存 %s (%d) 資料到 %s 表 (%s=%d)\n"
 - Original: "Saved char %d - %s:%s.\n"
-  Translation: "已儲存角色編號為: %d, 角色名為: %s 的 %s 資料.\n"
+  Translation: "已儲存角色編號為: %d, 角色名為: %s 的%s 資料.\n"
 - Original: "Saved guild (%d - %s):%s\n"
   Translation: ""
 - Original: "Saved guild castle (%d)\n"
@@ -1239,7 +1243,7 @@ Body:
 - Original: "Sending users of map-server %d offline.\n"
   Translation: "正在給地圖伺服器 %d 的玩家傳送下線請求.\n"
 - Original: "Server and client is not support Non-ANSI character set very well.\n"
-  Translation: ""
+  Translation: "仙境傳說模擬器和客戶端對非 ANSI 編碼的字符集支援並不友好.\n"
 - Original: "Server crashdump file will be saved to: [{CL_WHITE}]'%s/'[{CL_RESET}]\n"
   Translation: "服務端程式崩潰時轉儲檔案將儲存到: [{CL_WHITE}]'%s/'[{CL_RESET}]\n"
 - Original: "Server has crashed while trying to save characters. Character data can't be saved!\n"
@@ -1260,10 +1264,8 @@ Body:
   Translation: "服務端程式使用 '[{CL_WHITE}]select[{CL_RESET}]' 事件分發器.\n"
 - Original: "Server will connect to [{CL_WHITE}]'%s'[{CL_RESET}] database using [{CL_WHITE}]'%s'[{CL_RESET}].\n"
   Translation: "服務端程式在建立 [{CL_WHITE}]'%s'[{CL_RESET}] 連線時將使用 [{CL_WHITE}]'%s'[{CL_RESET}] 編碼.\n"
-- Original: "Server will connect to [{CL_WHITE}]'%s'[{CL_RESET}] database without set codepage.\n"
-  Translation: ""
 - Original: "Session #%d timed out\n"
-  Translation: ""
+  Translation: "連線編號為 #%d 的會話已超時\n"
 - Original: "Set skills to '%d' monsters.\n"
   Translation: ""
 - Original: "Setting accounts from char-server %d offline.\n"
@@ -1303,9 +1305,9 @@ Body:
 - Original: "Storage has been saved (AID: %d).\n"
   Translation: ""
 - Original: "Subnet check [%u.%u.%u.%u]: Matches [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
-  Translation: "子網掩碼 [%u.%u.%u.%u]: 已匹配到 [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
+  Translation: "子網檢查 [%u.%u.%u.%u]: 已匹配到 [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
 - Original: "Subnet check [%u.%u.%u.%u]: [{CL_CYAN}]WAN[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "子網檢查 [%u.%u.%u.%u]: [{CL_CYAN}]WAN - 廣域網[{CL_RESET}]\n"
 - Original: "Successfully loaded '[{CL_WHITE}]%d[{CL_RESET}]' maps.[{CL_CLL}]\n"
   Translation: "已成功\載入了 '[{CL_WHITE}]%d[{CL_RESET}]' 張地圖.[{CL_CLL}]\n"
 - Original: "Successfully logged on to Char Server (Connection: '[{CL_WHITE}]%d[{CL_RESET}]').\n"
@@ -1413,7 +1415,7 @@ Body:
 - Original: "Usage: %s [options]\n"
   Translation: ""
 - Original: "User '%s' is already online - Rejected.\n"
-  Translation: ""
+  Translation: "賬號 '%s' 已經線上 - 拒絕本次登入, 並將此賬號踢下線.\n"
 - Original: "User Count: %d (Server: %d)\n"
   Translation: ""
 - Original: "Using SQL dbs: %s\n"
@@ -1438,8 +1440,6 @@ Body:
   Translation: ""
 - Original: "WFIFOSET: Write Buffer Overflow. Connection %d (%d.%d.%d.%d) has written %u bytes on a %u/%u bytes buffer.\n"
   Translation: ""
-- Original: "We suggest you use ANSI character set as database encoding.\n"
-  Translation: ""
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
   Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
@@ -1451,9 +1451,9 @@ Body:
 - Original: "[Instance] Created map '%s' ('%d') from map '%s' ('%d')\n"
   Translation: ""
 - Original: "[Instance] Created: %s (%hu).\n"
-  Translation: ""
+  Translation: "[副本系統] 已建立副本: %s (副本編號: #%hu).\n"
 - Original: "[Instance] Destroyed %hu.\n"
-  Translation: ""
+  Translation: "[副本系統] 已銷燬編號為 #%hu 的副本.\n"
 - Original: "[{CL_BG_RED}]     [{CL_BOLD}]                                                                      [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_BG_RED}]     [{CL_BT_WHITE}]                                                                  [{CL_BT_WHITE}][{CL_CLL}][{CL_NORMAL}]\n"
@@ -1533,13 +1533,13 @@ Body:
 - Original: "[{CL_PASS}]     [{CL_BOLD}]        /_/  /_/  |_\\__/_/ /_/\\___/_/ /_/\\__,_/                  [{CL_PASS}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_RED}]Char Deleted[{CL_RESET}] [{CL_GREEN}](Birthdate)[{CL_RESET}].\n"
-  Translation: ""
+  Translation: "[{CL_RED}]已成功\刪除角色[{CL_RESET}] [{CL_GREEN}](通過生日認證)[{CL_RESET}].\n"
 - Original: "[{CL_RED}]Char Deleted[{CL_RESET}] [{CL_GREEN}](E-Mail)[{CL_RESET}].\n"
-  Translation: ""
+  Translation: "[{CL_RED}]已成功\刪除角色[{CL_RESET}] [{CL_GREEN}](通過 E-Mail 認證)[{CL_RESET}].\n"
 - Original: "[{CL_RED}]Request Char Deletion: [{CL_GREEN}]%d (%d)[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "[{CL_RED}]請求刪除指定角色 [{CL_GREEN}]賬號編號: %d | 角色編號: %d[{CL_RESET}]\n"
 - Original: "[{CL_RED}]Request Char Deletion: [{CL_GREEN}]%u (%u)[{CL_RESET}]\n"
-  Translation: ""
+  Translation: "[{CL_RED}]請求刪除指定角色 [{CL_GREEN}]賬號編號: %u | 角色編號: %u[{CL_RESET}]\n"
 - Original: "[{CL_RED}][Error][{CL_RESET}]:"
   Translation: "[{CL_RED}][錯誤][{CL_RESET}]:"
 - Original: "[{CL_RED}][Fatal Error][{CL_RESET}]:"
@@ -1549,7 +1549,7 @@ Body:
 - Original: "[{CL_WHITE}][Notice][{CL_RESET}]:"
   Translation: "[{CL_WHITE}][提示][{CL_RESET}]:"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Connecting to the Log Database [{CL_WHITE}]%s[{CL_RESET}] At [{CL_WHITE}]%s[{CL_RESET}]...\n"
-  Translation: "正在連線日誌資料庫 [{CL_WHITE}]%s[{CL_RESET}] 位於 [{CL_WHITE}]%s[{CL_RESET}]...\n"
+  Translation: "正在連線日誌資料庫 [{CL_WHITE}]'%s'[{CL_RESET}] 位於 [{CL_WHITE}]%s[{CL_RESET}]...\n"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Successfully '[{CL_GREEN}]connected[{CL_RESET}]' to Database '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "[{CL_GREEN}]已成功\連線[{CL_RESET}] 到日誌資料庫 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "[{CL_YELLOW}][Warning][{CL_RESET}]:"
@@ -3053,11 +3053,11 @@ Body:
 - Original: "make_connection: Socket #0 is reserved - Please report this!!!\n"
   Translation: ""
 - Original: "make_connection: connect failed (socket #%d, %s)!\n"
-  Translation: ""
+  Translation: "連線失敗 (套接字 #%d, %s)!\n"
 - Original: "make_connection: connection failed (socket #%d, not writeable)!\n"
-  Translation: ""
+  Translation: "連線失敗 (套接字 #%d, 無法寫入資料)!\n"
 - Original: "make_connection: connection failed (socket #%d, timeout after %ds)!\n"
-  Translation: ""
+  Translation: "連線失敗 (套接字 #%d, 經過 %d 秒等待, 已被判定為超時)!\n"
 - Original: "make_connection: failed to add socket #%d to epoll event dispatcher: %s\n"
   Translation: ""
 - Original: "make_connection: socket creation failed (%s)!\n"
