--- a/src/common/common-minicore.vcxproj.filters
+++ b/src/common/common-minicore.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClInclude Include="utf8_defines.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="performance.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cli.cpp">
@@ -146,6 +149,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="database.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="performance.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
