--- a/src/common/common-minicore.vcxproj
+++ b/src/common/common-minicore.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="mmo.hpp" />
     <ClInclude Include="msg_conf.hpp" />
     <ClInclude Include="nullpo.hpp" />
+    <ClInclude Include="performance.hpp" />
     <ClInclude Include="random.hpp" />
     <ClInclude Include="showmsg.hpp" />
     <ClInclude Include="strlib.hpp" />
@@ -59,6 +60,7 @@
     <ClCompile Include="crashdump.cpp" />
     <ClCompile Include="msg_conf.cpp" />
     <ClCompile Include="nullpo.cpp" />
+    <ClCompile Include="performance.cpp" />
     <ClCompile Include="random.cpp" />
     <ClCompile Include="showmsg.cpp" />
     <ClCompile Include="strlib.cpp" />
