--- a/src/common/common.vcxproj.filters
+++ b/src/common/common.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClInclude Include="utf8_defines.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="performance.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cli.cpp">
@@ -182,6 +185,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="translate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="performance.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
